src/snapshots/blis__compile__tests__test_programs__scope_stress.blis.chunk.snap
---
source: src/compile.rs
description: "let x = 1;\n\nfunc f(x, y, z) {\n    let x = x + 10;\n    let y = x + 20;\n\n    {\n        let z = z;\n        println(x, y, z);\n    }\n\n    println(x, y, z);\n}\n\nfunc main() {\n    f(x, 2, 3);\n\n    let x = 4;\n    f(x, 4, 5);\n}\n\nmain();\n"
input_file: test_programs/scope_stress.blis
---
DisassembledChunk(
  constants: [
    Rational(((1, [
      1,
    ]), (1, [
      1,
    ]))),
    Func(DisassembledFunc(
      name: "f",
      arity: 3,
      upvalues: 0,
      chunk: DisassembledChunk(
        constants: [
          Rational(((1, [
            10,
          ]), (1, [
            1,
          ]))),
          Rational(((1, [
            20,
          ]), (1, [
            1,
          ]))),
        ],
        globals: [
          "println",
        ],
        code: [
          GetLocal(1),
          Constant(0),
          Add,
          GetLocal(4),
          Constant(1),
          Add,
          GetLocal(3),
          GetGlobal(0),
          GetLocal(4),
          GetLocal(5),
          GetLocal(6),
          Call(3),
          Pop,
          Nil,
          PopUnderN(1),
          Pop,
          GetGlobal(0),
          GetLocal(4),
          GetLocal(5),
          GetLocal(3),
          Call(3),
          Pop,
          Nil,
          PopUnderN(2),
          Return,
        ],
      ),
    )),
    Func(DisassembledFunc(
      name: "main",
      arity: 0,
      upvalues: 0,
      chunk: DisassembledChunk(
        constants: [
          Rational(((1, [
            2,
          ]), (1, [
            1,
          ]))),
          Rational(((1, [
            3,
          ]), (1, [
            1,
          ]))),
          Rational(((1, [
            4,
          ]), (1, [
            1,
          ]))),
          Rational(((1, [
            4,
          ]), (1, [
            1,
          ]))),
          Rational(((1, [
            5,
          ]), (1, [
            1,
          ]))),
        ],
        globals: [
          "f",
          "x",
        ],
        code: [
          GetGlobal(0),
          GetGlobal(1),
          Constant(0),
          Constant(1),
          Call(3),
          Pop,
          Constant(2),
          GetGlobal(0),
          GetLocal(1),
          Constant(3),
          Constant(4),
          Call(3),
          Pop,
          Nil,
          PopUnderN(1),
          Return,
        ],
      ),
    )),
  ],
  globals: [
    "x",
    "f",
    "main",
  ],
  code: [
    Constant(0),
    DefineGlobal(0),
    Closure(1, 0, []),
    DefineGlobal(1),
    Closure(2, 0, []),
    DefineGlobal(2),
    GetGlobal(2),
    Call(0),
    Pop,
    Nil,
    Return,
  ],
)
